# PaNote

./: README.md  pyproject.toml  streamlit_app.py
assets/: songs.json
util/: sound_generator.py
