[project]
name = "panote"
version = "0.1.0"
description = ""
authors = [
    {name = "CagataySavasli",email = "cagatay.savasli@ozu.edu.tr"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "streamlit (>=1.45.0,<2.0.0)",
    "scipy (>=1.15.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
